--- a/style.css
+++ b/style.css
@@ -88,11 +88,27 @@ section h1{
     margin: auto;
     display: flex;
     align-items: center;
+    transition: height .2s ease;
+}
+
+.auth-modal.slide{
+    height: 520px;
 }
 
 .auth-modal .form-box{
     width: 100%;
     padding: 40px;
+}
+
+.auth-modal .form-box.login, 
+.auth-modal.slide .form-box.register{
+    transform: translateX(0);
+    transition: transform .18s ease;
+}
+
+.auth-modal.slide .form-box.login{
+    transform: translateX(-400px);
+    transition: none;
 }
 
 .auth-modal .form-box.register{
